# kaia-guardrails

./: .gitignore  AGENTS.instructions.md  CLAUDE.md  INSTALL_DESIGN.md  README.md  pyproject.toml
.claude/: settings.json  shell-config.md  shell-helper.sh
scripts/: README.md  install_shell_integration.py  uninstall_shell_integration.py
src/kaia_guardrails/: __init__.py  analytics.py  audit_viewer.py  classifier.py  cli.py  conversation_history_ingester.py  conversation_reader.py  interceptor.py  llm.py  llm_client.py  llm_judge.py  local_config.py  memory_curator.py  simple_config.py  utils.py  vibelint_safe.py  vibelint_simple.py
src/kaia_guardrails/hooks/: __init__.py  base.py  fast_judge_util.py  filesystem_adapter.py  loader.py  orchestrator.py  orchestrator_judge_util.py
src/kaia_guardrails/hooks/implementation/: __init__.py  agents-compliance-judge.py  agents_compliance.py  agents_compliance_judge.py  claude-shell-config.py  claude_tool_name_provider.py  conversation_flashback_system.py  detect-nested-claude-dirs.py  detect_nested_claude_dirs.py  emoji-check.py  emoji_check.py  file_insertion_validator.py  focus_alignment.py  focus_auto_commit.py  focus_process_manager.py  focus_tracker.py  git_guard.py  git_operations_guard.py  hook_profiler.py  model_output_logger.py  multitool-safeguards.py  override_usage_tracker.py  post-edit-vibelint-check.py  post_edit_vibelint.py  pre_edit_validation.py  process-drift-guard.py  process_drift_guard.py  qdrant_chat_ingester.py  vibe_failure_tracker.py  vibelint-progress-tracker.py  vibelint_single_file_validation.py  work-tree-manager.py
tests/: test_focus_process_manager.py
