[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaia-guardrails"
version = "0.1.0"
description = "Core command execution analytics and guardrails system for kaia AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaia Development Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.25.0",
    "psutil>=5.8.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/kaia-dev/kaia-guardrails"
Repository = "https://github.com/kaia-dev/kaia-guardrails"
Issues = "https://github.com/kaia-dev/kaia-guardrails/issues"

[project.scripts]
kaia-guardrails = "kaia_guardrails.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.version]
path = "src/kaia_guardrails/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kaia_guardrails"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["kaia_guardrails"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=kaia_guardrails",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
